# whisper

./: .gitignore  Dockerfile  README.md  app.py  build.sh  pyproject.toml  requirements.txt
