[tool.poetry]
name = "dataspects-whisper"
version = "0.1.0"
description = ""
authors = ["Lex Sulzer <lex@dataspects.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.1.1"
librosa = "^0.11.0"
torch = "^2.7.1"
soundfile = "^0.13.1"
pydub = "^0.25.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
rich = "^14.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
